--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ python = "==3.8.*"
 Django = "3.2.9"
 django-admin-rangefilter = "~0.5"
 django-cors-headers = "==3.4.0"
-django-dotenv = "==1.4.2"
 django-enumfields = "==2.0.0"
 django-environ = "==0.4.5"
 django-extensions = "==2.1.4"
@@ -24,8 +23,8 @@ django-fieldsignals = "~0.5"
 django-filter = "~2.4"
 djangorestframework = "==3.12.4"
 djangorestframework-jsonapi = "~4.*"
+djangorestframework-simplejwt = "==5.0.0"
 psycopg2 = ">=2.5.4"
-pyjwt = "~1.7"
 pyyaml = ">=4.2b4"
 redis = "~3.3"
 requests = "~2.24"
