--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 x-common-environment: &common-environ
   PYTHONDONTWRITEBYTECODE: 1
-  ENV:
+  ENVIRONMENT:
   SECRET_KEY:
   POSTGRES_USER:
   POSTGRES_PASSWORD:
