--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,14 @@ django-admin-rangefilter = "~0.5"
 django-cors-headers = "==3.4.0"
 django-enumfields = "==2.0.0"
 django-environ = "==0.4.5"
-django-extensions = "==2.1.4"
+django-extensions = "==3.1.5"
 django-fancy-cache = "~1.0"
 django-fieldsignals = "~0.5"
 django-filter = "~2.4"
 djangorestframework = "==3.12.4"
 djangorestframework-jsonapi = "~4.*"
 djangorestframework-simplejwt = "==5.0.0"
+ipython = ">=7.17"
 psycopg2 = ">=2.5.4"
 pyyaml = ">=4.2b4"
 redis = "~3.3"
