--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ Django = "3.2.9"
 django-admin-rangefilter = "~0.5"
 django-cors-headers = "==3.4.0"
 django-enumfields = "==2.0.0"
-django-environ = "==0.4.5"
+django-environ = "~0.8"
 django-extensions = "==3.1.5"
 django-fancy-cache = "~1.0"
 django-fieldsignals = "~0.5"
