--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,9 @@ authors = [
 [tool.poetry.dependencies]
 python = "==3.8.*"
 
-Django = "3.2.9"
+Django = "==3.2.12"
 django-admin-rangefilter = "~0.5"
-django-cors-headers = "==3.4.0"
+django-cors-headers = ">=3.10.0"
 django-enumfields = "==2.0.0"
 django-environ = "~0.8"
 django-extensions = "==3.1.5"
