Add drf-nested-routers bump pillow version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ django-filter = "~2.4"
 djangorestframework = "==3.12.4"
 djangorestframework-jsonapi = "~4.*"
 djangorestframework-simplejwt = "==5.0.0"
+drf-nested-routers = "~0.93.0"
 ipython = ">=7.17"
 psycopg2 = ">=2.5.4"
 pyyaml = ">=4.2b4"
@@ -41,7 +42,7 @@ django-mock-queries = "~2.1"
 django-pycharm-breakpoint = "~0.2.0"
 fpdf = "==1.7.2"
 freezegun = "~0.3"
-pillow = "~7"
+pillow = "~8"
 pyexcel = "~0.5"
 pyexcel-xls = "~0.5"
 pyexcel-xlsx = "~0.5"
