--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ ipython = ">=7.17"
 psycopg2 = ">=2.5.4"
 pyyaml = ">=4.2b4"
 redis = "~3.3"
-requests = "~2.24"
+requests = "^2.27"
 uwsgi = "~2.0.17"
 watchdog = "~0.9"
 whitenoise = "~4.1"
