--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ psycopg2 = ">=2.5.4"
 pyyaml = ">=4.2b4"
 redis = "~3.3"
 requests = "^2.27"
+urllib3 = "^1.26.5"
 uwsgi = "~2.0.17"
 watchdog = "~0.9"
 whitenoise = "~4.1"
