--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,12 @@ authors = [
 [tool.poetry.dependencies]
 python = "==3.8.*"
 
+django-anymail = "^8.5"
 Django = "==3.2.12"
 django-admin-rangefilter = "~0.5"
 django-cors-headers = ">=3.10.0"
 django-enumfields = "==2.0.0"
-django-environ = "~0.8"
+django-environ = "^0.8.1"
 django-extensions = "==3.1.5"
 django-fancy-cache = "~1.0"
 django-fieldsignals = "~0.5"
@@ -48,7 +49,7 @@ pyexcel = "~0.5"
 pyexcel-xls = "~0.5"
 pyexcel-xlsx = "~0.5"
 pytest = ">=5.4"
-pytest-xdist = "~2.5"
+pytest-xdist = "^2.5"
 pytest-cov = "~3"
 pytest-django = "~4.5"
 pytest-mock = "^1.10"
