--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,37 +1,24 @@
 version: '3.9'
 
 services:
-  web:
+  djanghi_api:
     build:
-      context: ./app
-      dockerfile: Dockerfile.prod
-    command: gunicorn hello_django.wsgi:application --bind 0.0.0.0:8000
+      context: .
+    image: djanghi/prod
+    command: gunicorn djanghi_api.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - static_volume:/home/app/web/staticfiles
-      - media_volume:/home/app/web/mediafiles
+      - static_volume:/var/djanghi/staticfiles
     expose:
       - 8000
-    env_file:
-      - ./.env.prod
-    depends_on:
-      - db
-  db:
-    image: postgres:13.0-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - ./.env.prod.db
   nginx:
     build: ./nginx
     volumes:
-      - static_volume:/home/app/web/staticfiles
-      - media_volume:/home/app/web/mediafiles
+      - static_volume:/var/djanghi/staticfiles
     ports:
-      - 1337:80
+      - "1337:80"
     depends_on:
-      - web
+      - djanghi_api
 
 volumes:
   postgres_data:
   static_volume:
-  media_volume:
