--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ djangorestframework = "==3.12.4"
 djangorestframework-jsonapi = "~4.*"
 djangorestframework-simplejwt = "==5.0.0"
 drf-nested-routers = "~0.93.0"
+gunicorn = "==20.1.0"
 ipython = ">=7.17"
 psycopg2 = ">=2.5.4"
 pyyaml = ">=4.2b4"
