--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    name: Build and run pytests
+    name: Build and run pytest
     runs-on: ubuntu-latest
     environment: CI Tests
     steps:
@@ -33,7 +33,6 @@ jobs:
           echo PAGE_SIZE=${{ secrets.PAGE_SIZE }} >> .env
           echo SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }} >> .env
           echo DEFAULT_FROM_EMAIL=${{ secrets.DEFAULT_FROM_EMAIL }} >> .env
-          echo CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }} >> .env
       - uses: actions/checkout@v2
       - name: Build images
         run: |
