--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: Add environment variables to .env
         run: |
+          touch .env
           echo DEBUG=0 >> .env
           echo ENVIRONMENT=${{ secrets.ENVIRONMENT }} >> .env
           echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
@@ -33,6 +34,7 @@ jobs:
           echo PAGE_SIZE=${{ secrets.PAGE_SIZE }} >> .env
           echo SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }} >> .env
           echo DEFAULT_FROM_EMAIL=${{ secrets.DEFAULT_FROM_EMAIL }} >> .env
+          echo CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }} >> .env
       - uses: actions/checkout@v2
       - name: Build images
         run: |
