--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -12,29 +12,31 @@ jobs:
     runs-on: ubuntu-latest
     environment: CI Tests
     steps:
-      - name: Add environment variables to .env
-        run: |
-          touch .env
-          echo DEBUG=0 >> .env
-          echo ENVIRONMENT=${{ secrets.ENVIRONMENT }} >> .env
-          echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-          echo ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }} >> .env
-          echo API_HOST=${{ secrets.API_HOST }} >> .env
-          echo DJANGO_LOG_LEVEL=${{ secrets.DJANGO_LOG_LEVEL }} >> .env
-          echo FRONT_END_HOST=${{ secrets.FRONT_END_HOST }} >> .env
-          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-          echo POSTGRES_HOST=${{ secrets.POSTGRES_HOST }} >> .env
-          echo POSTGRES_DB=${{ secrets.POSTGRES_DB }} >> .env
-          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-          echo ACCESS_TOKEN_LIFETIME=${{ secrets.ACCESS_TOKEN_LIFETIME }} >> .env
-          echo REFRESH_TOKEN_LIFETIME=${{ secrets.ACCESS_TOKEN_LIFETIME }} >> .env
-          echo JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} >> .env
-          echo AUTH_HEADER_TYPES=${{ secrets.AUTH_HEADER_TYPES }} >> .env
-          echo PAGE_SIZE=${{ secrets.PAGE_SIZE }} >> .env
-          echo SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }} >> .env
-          echo DEFAULT_FROM_EMAIL=${{ secrets.DEFAULT_FROM_EMAIL }} >> .env
-          echo CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }} >> .env
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_DEBUG=false
+          envkey_ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
+          envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          envkey_ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
+          envkey_API_HOST: ${{ secrets.API_HOST }}
+          envkey_DJANGO_LOG_LEVEL: ${{ secrets.DJANGO_LOG_LEVEL }}
+          envkey_FRONT_END_HOST: ${{ secrets.FRONT_END_HOST }}
+          envkey_POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          envkey_POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          envkey_POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+          envkey_POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          envkey_DB_PORT: ${{ secrets.DB_PORT }}
+          envkey_ACCESS_TOKEN_LIFETIME: ${{ secrets.ACCESS_TOKEN_LIFETIME }}
+          envkey_REFRESH_TOKEN_LIFETIME: ${{ secrets.ACCESS_TOKEN_LIFETIME }}
+          envkey_JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+          envkey_AUTH_HEADER_TYPES: ${{ secrets.AUTH_HEADER_TYPES }}
+          envkey_PAGE_SIZE: ${{ secrets.PAGE_SIZE }}
+          envkey_SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+          envkey_DEFAULT_FROM_EMAIL: ${{ secrets.DEFAULT_FROM_EMAIL }}
+          envkey_CORS_ALLOWED_ORIGINS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
+          file_name: .env
+          fail_on_empty: false
       - uses: actions/checkout@v2
       - name: Build images
         run: |
