--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: CI Tests
     steps:
+      - uses: actions/checkout@v2
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1.3
         with:
@@ -36,8 +37,7 @@ jobs:
           envkey_DEFAULT_FROM_EMAIL: ${{ secrets.DEFAULT_FROM_EMAIL }}
           envkey_CORS_ALLOWED_ORIGINS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
           file_name: .env
-          fail_on_empty: false
-      - uses: actions/checkout@v2
+          fail_on_empty: true
       - name: Build images
         run: |
           make build-CI
