--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ drf-nested-routers = "~0.93.0"
 gunicorn = "==20.1.0"
 ipython = ">=7.17"
 psycopg2 = ">=2.5.4"
+pytz = "^2022.1"
 pyyaml = ">=4.2b4"
 redis = "~3.3"
 requests = "^2.27"
