--- a/.github/workflows/ci-config.yml
+++ b/.github/workflows/ci-config.yml
@@ -1,4 +1,4 @@
-name: Djanghi CI Tests
+name: Djanghi Pipeliine
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  test:
+  tests:
     name: Build and run pytest
     runs-on: ubuntu-latest
     environment: CI Tests
@@ -16,7 +16,7 @@ jobs:
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1.3
         with:
-          envkey_DEBUG: false
+          envkey_DEBUG: ${{ secrets.DEBUG }}
           envkey_ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
           envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
           envkey_ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
@@ -39,9 +39,53 @@ jobs:
           file_name: .env
           fail_on_empty: true
       - name: Build images
-        run: |
-          make build-CI
-          make build
+        run: make build
       - name: Run Tests
-        run: |
-          make CI-pytest
+        run: make CI-pytest
+
+  deploy:
+    name: Deploy images
+    runs-on: ubuntu-latest
+    environment: prod
+    needs: tests
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Checkout master
+        uses: actions/checkout@v2
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_DEBUG: ${{ secrets.DEBUG }}
+          envkey_ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
+          envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          envkey_ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
+          envkey_API_HOST: ${{ secrets.API_HOST }}
+          envkey_DJANGO_LOG_LEVEL: ${{ secrets.DJANGO_LOG_LEVEL }}
+          envkey_FRONT_END_HOST: ${{ secrets.FRONT_END_HOST }}
+          envkey_POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          envkey_POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          envkey_POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+          envkey_POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          envkey_DB_PORT: ${{ secrets.DB_PORT }}
+          envkey_ACCESS_TOKEN_LIFETIME: ${{ secrets.ACCESS_TOKEN_LIFETIME }}
+          envkey_REFRESH_TOKEN_LIFETIME: ${{ secrets.ACCESS_TOKEN_LIFETIME }}
+          envkey_JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+          envkey_AUTH_HEADER_TYPES: ${{ secrets.AUTH_HEADER_TYPES }}
+          envkey_PAGE_SIZE: ${{ secrets.PAGE_SIZE }}
+          envkey_SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+          envkey_DEFAULT_FROM_EMAIL: ${{ secrets.DEFAULT_FROM_EMAIL }}
+          envkey_CORS_ALLOWED_ORIGINS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
+          file_name: .env
+          fail_on_empty: true
+
+      - name: Log in to GitHub Packages
+        run: echo ${PACKAGE_ACCESS_TOKEN} | docker login ghcr.io -u ${{ secrets.NAMESPACE }} --password-stdin
+        env:
+          PACKAGE_ACCESS_TOKEN: ${{ secrets.PACKAGE_ACCESS_TOKEN }}
+        - name: Build images
+          run: |
+            docker-compose -f docker-compose.c.yml build
+#        - name: Push images
+#          run: |
+#            docker push ${{ env.WEB_IMAGE }}
+#            docker push ${{ env.NGINX_IMAGE }}
