--- a/.github/workflows/ci-config.yml
+++ b/.github/workflows/ci-config.yml
@@ -73,6 +73,10 @@ jobs:
           envkey_SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
           envkey_DEFAULT_FROM_EMAIL: ${{ secrets.DEFAULT_FROM_EMAIL }}
           envkey_CORS_ALLOWED_ORIGINS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
+          envkey_REGISTRY_HOST: ${{ secrets.REGISTRY_HOST }}
+          envkey_REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
+          envkey_API_IMAGE_NAME: ${{ secrets.API_IMAGE_NAME }}
+          envkey_NGINX_IMAGE: ${{ secrets.NGINX_IMAGE }}
           file_name: .env
           fail_on_empty: true
       - name: Login to GitHub Container Registry
