--- a/.github/workflows/ci-config.yml
+++ b/.github/workflows/ci-config.yml
@@ -93,6 +93,15 @@ jobs:
           docker push ${{ secrets.REGISTRY_HOST }}/${{ secrets.REGISTRY_USERNAME }}/${{ secrets.API_IMAGE_NAME }}
           docker push ${{ secrets.REGISTRY_HOST }}/${{ secrets.REGISTRY_USERNAME }}/${{ secrets.NGINX_IMAGE }}
 
+      - name: copy compose file to server
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.PROD_HOST_IP }}
+        USERNAME: ${{ secrets.SSH_USER }}
+        KEY: ${{ secrets.SSH_KEY }}
+        source: "docker-compose.prod.yml,.env"
+        target: "app"
+
       - name: server ssh and run images
         uses: appleboy/ssh-action@master
         with:
