--- a/.github/workflows/ci-config.yml
+++ b/.github/workflows/ci-config.yml
@@ -101,6 +101,14 @@ jobs:
           KEY: ${{ secrets.SSH_KEY }}
           source: "docker-compose.prod.yml,.env"
           target: "app"
+      - name: copy nginx folder
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.PROD_HOST_IP }}
+          USERNAME: ${{ secrets.SSH_USER }}
+          KEY: ${{ secrets.SSH_KEY }}
+          source: "nginx/*"
+          target: "app/nginx"
 
       - name: server ssh and run images
         uses: appleboy/ssh-action@master
