--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream djanghi_api {
 server {
 
     listen 80;
-    server_name api.djanghi.com www.djanghi.com;
+    server_name api.djanghi.com www.api.djanghi.com;
     location / {
         proxy_pass http://djanghi-api:8070;
         proxy_set_header Host $host;
