--- a/.github/workflows/ci-config.yml
+++ b/.github/workflows/ci-config.yml
@@ -77,6 +77,7 @@ jobs:
           envkey_REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
           envkey_API_IMAGE_NAME: ${{ secrets.API_IMAGE_NAME }}
           envkey_NGINX_IMAGE: ${{ secrets.NGINX_IMAGE }}
+          envkey_MAINTAINER_EMAIL: ${{ secrets.MAINTAINER_EMAIL }}
           file_name: .env
           fail_on_empty: true
       - name: Login to Container Registry
