--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,21 +2,23 @@ upstream djanghi_api {
     server djanghi-api:8070;
 }
 
-server {
-	listen 80 default_server;
-	return 444;
-}
+# server {
+# 	listen 80 default_server;
+# 	return 444;
+# }
+
+# server {
+# 	listen 80;
+# 	listen [::]:80;
+# 	server_name api.djanghi.com www.api.djanghi.com;
+# 	return 301 https://$server_name$request_uri;
+# }
 
 server {
-	listen 80;
+    listen 80;
 	listen [::]:80;
-	server_name api.djanghi.com www.api.djanghi.com;
-	return 301 https://$server_name$request_uri;
-}
-
-server {
-	listen 443 ssl http2;
-	listen [::]:443 ssl http2;
+# 	listen 443 ssl http2;
+# 	listen [::]:443 ssl http2;
 	server_name api.djanghi.com;
 
 # 	ssl_certificate /etc/letsencrypt/live/api.djanghi.com/fullchain.pem;
