Tweak compose prod

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,7 +45,7 @@ server {
     }
 
 	location ^~ /.well-known/acme-challenge/ {
-		root /var/djanghi/static;
+		root /var/www/html;
 	}
 
 	location /static/ {
