--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,10 +32,10 @@ services:
     volumes:
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
-      - web-root:/var/djanghi/static
+      - web-root:/var/www/html
     depends_on:
       - nginx
-    command: certonly --webroot --webroot-path=/var/djanghi/static --email ${MAINTAINER_EMAIL} --agree-tos --no-eff-email --staging -d ${API_HOST}  -d www.${API_HOST}
+    command: certonly --webroot --webroot-path=/var/www/html --email ${MAINTAINER_EMAIL} --agree-tos --no-eff-email --staging -d ${API_HOST}  -d www.${API_HOST}
 
 volumes:
   static_volume:
