--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,7 +19,7 @@ server {
 	listen [::]:80;
 # 	listen 443 ssl http2;
 # 	listen [::]:443 ssl http2;
-	server_name api.djanghi.com;
+	server_name api.djanghi.com www.api.djanghi.com;
 
 # 	ssl_certificate /etc/letsencrypt/live/api.djanghi.com/fullchain.pem;
 # 	ssl_certificate_key /etc/letsencrypt/live/api.djanghi.com/privkey.pem;
@@ -45,6 +45,7 @@ server {
     }
 
 	location ^~ /.well-known/acme-challenge/ {
+	    allow all;
 		root /var/www/html;
 	}
 
