--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,6 +19,9 @@ services:
     image: ${REGISTRY_HOST}/${REGISTRY_USERNAME}/${NGINX_IMAGE}
     volumes:
       - static_volume:/var/djanghi/static
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - web-root:/var/www/html
     ports:
       - "80:80"
     depends_on:
