--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,15 +2,22 @@ upstream djanghi_api {
     server djanghi-api:8070;
 }
 
-server {
-	listen 80 default_server;
-	return 444;
-}
+# server {
+# 	listen 80 default_server;
+# 	return 444;
+# }
 
 server {
 	listen 80;
 	listen [::]:80;
 	server_name api.djanghi.com www.api.djanghi.com;
+	return 301 https://$server_name$request_uri;
+}
+
+server {
+	listen 80;
+	listen [::]:80;
+	server_name djanghi.com www.djanghi.com;
 	return 301 https://$server_name$request_uri;
 }
 
@@ -50,4 +57,21 @@ server {
 	location /static/ {
         alias /var/djanghi/static/;
     }
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name djanghi.com www.djanghi.com;
+
+    root /usr/share/nginx/html/build;
+    index index.html index.htm index.nginx-debian.html;
+    location / {
+        try_files $uri $uri/ /index.html?$args;
+    }
+
+    ssl_certificate /etc/letsencrypt/live/djanghi.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/djanghi.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
