--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,6 +14,14 @@ services:
     networks:
       - djanghi-network
 
+  djanghi-ui:
+    image: ${REGISTRY_HOST}/${REGISTRY_USERNAME}/${UI_IMAGE_NAME}
+    restart: unless-stopped
+    volumes:
+      - ui-build:/src/build
+    networks:
+      - djanghi-network
+
   nginx:
     build: ./nginx
     image: ${REGISTRY_HOST}/${REGISTRY_USERNAME}/${NGINX_IMAGE}
@@ -23,9 +31,11 @@ services:
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
       - web-root:/var/www/html
+      - ui-build:/usr/share/nginx/html/build
     ports:
       - "80:80"
       - "443:443"
+    command: ["nginx", "-g", "daemon off;"]
     depends_on:
       - djanghi-api
     networks:
@@ -40,13 +50,14 @@ services:
       - web-root:/var/www/html
     depends_on:
       - nginx
-    command: certonly --webroot --webroot-path=/var/www/html --email ${MAINTAINER_EMAIL} --agree-tos --no-eff-email --force-renewal -d ${API_HOST}  -d www.${API_HOST}
+    command: certonly --webroot --webroot-path=/var/www/html --email ${MAINTAINER_EMAIL} --agree-tos --no-eff-email --force-renewal -d ${API_HOST} -d www.${API_HOST} -d djanghi.com -d www.djanghi.com
 
 volumes:
   static_volume:
   certbot-etc:
   certbot-var:
   web-root:
+  ui-build:
 
 networks:
   djanghi-network:
