--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,15 @@ server {
 	listen 80;
 	listen [::]:80;
 	server_name api.djanghi.com www.api.djanghi.com;
-	return 301 https://$server_name$request_uri;
+# 	return 301 https://$server_name$request_uri;
+
+	server_name djanghi.com www.djanghi.com;
+
+    root /usr/share/nginx/html/build;
+    index index.html index.htm index.nginx-debian.html;
+    location / {
+        try_files $uri $uri/ /index.html?$args;
+    }
 }
 
 server {
@@ -59,19 +67,19 @@ server {
     }
 }
 
-server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    server_name djanghi.com www.djanghi.com;
-
-    root /usr/share/nginx/html/build;
-    index index.html index.htm index.nginx-debian.html;
-    location / {
-        try_files $uri $uri/ /index.html?$args;
-    }
-
-    ssl_certificate /etc/letsencrypt/live/djanghi.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/djanghi.com/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-}
+# server {
+#     listen 443 ssl;
+#     listen [::]:443 ssl;
+#     server_name djanghi.com www.djanghi.com;
+#
+#     root /usr/share/nginx/html/build;
+#     index index.html index.htm index.nginx-debian.html;
+#     location / {
+#         try_files $uri $uri/ /index.html?$args;
+#     }
+#
+#     ssl_certificate /etc/letsencrypt/live/djanghi.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/djanghi.com/privkey.pem;
+#     include /etc/letsencrypt/options-ssl-nginx.conf;
+#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+# }
