Add challenge endpoint

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,6 +20,11 @@ server {
     location / {
         try_files $uri $uri/ /index.html?$args;
     }
+
+    location ^~ /.well-known/acme-challenge/ {
+	    allow all;
+		root /var/www/html;
+	}
 }
 
 server {
