--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,29 +2,11 @@ upstream djanghi_api {
     server djanghi-api:8070;
 }
 
-# server {
-# 	listen 80 default_server;
-# 	return 444;
-# }
-
 server {
 	listen 80;
 	listen [::]:80;
 	server_name api.djanghi.com www.api.djanghi.com;
-# 	return 301 https://$server_name$request_uri;
-
-	server_name djanghi.com www.djanghi.com;
-
-    root /usr/share/nginx/html/build;
-    index index.html index.htm index.nginx-debian.html;
-    location / {
-        try_files $uri $uri/ /index.html?$args;
-    }
-
-    location ^~ /.well-known/acme-challenge/ {
-	    allow all;
-		root /var/www/html;
-	}
+	return 301 https://$server_name$request_uri;
 }
 
 server {
@@ -72,19 +54,24 @@ server {
     }
 }
 
-# server {
-#     listen 443 ssl;
-#     listen [::]:443 ssl;
-#     server_name djanghi.com www.djanghi.com;
-#
-#     root /usr/share/nginx/html/build;
-#     index index.html index.htm index.nginx-debian.html;
-#     location / {
-#         try_files $uri $uri/ /index.html?$args;
-#     }
-#
-#     ssl_certificate /etc/letsencrypt/live/djanghi.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/djanghi.com/privkey.pem;
-#     include /etc/letsencrypt/options-ssl-nginx.conf;
-#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-# }
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name djanghi.com www.djanghi.com;
+
+    root /usr/share/nginx/html/build;
+    index index.html index.htm index.nginx-debian.html;
+    location / {
+        try_files $uri $uri/ /index.html?$args;
+    }
+
+    ssl_certificate /etc/letsencrypt/live/api.djanghi.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.djanghi.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location ^~ /.well-known/acme-challenge/ {
+	    allow all;
+		root /var/www/html;
+	}
+}
