--- a/.github/workflows/ci-config.yml
+++ b/.github/workflows/ci-config.yml
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: prod
     needs: tests
-#    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
       - name: Make and populate .env file
@@ -121,6 +121,7 @@ jobs:
           KEY: ${{ secrets.SSH_KEY }}
           script: |
             cd app/
+            docker rmi $(docker images -a -q)
             docker login ${{ secrets.REGISTRY_HOST }} -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.PACKAGE_ACCESS_TOKEN }}
             docker pull ${{ secrets.REGISTRY_HOST }}/${{ secrets.REGISTRY_USERNAME }}/${{ secrets.API_IMAGE_NAME }}
             docker pull ${{ secrets.REGISTRY_HOST }}/${{ secrets.REGISTRY_USERNAME }}/${{ secrets.NGINX_IMAGE }}
