--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ authors = [
 python = "==3.8.*"
 
 django-anymail = "^8.5"
-Django = "==3.2.12"
+Django = "==4.0"
 django-admin-rangefilter = "~0.5"
 django-cors-headers = ">=3.10.0"
 django-enumfields = "==2.0.0"
@@ -26,8 +26,10 @@ djangorestframework = "==3.12.4"
 djangorestframework-jsonapi = "~4.*"
 djangorestframework-simplejwt = "==5.0.0"
 drf-nested-routers = "~0.93.0"
+gunicorn = "==20.1.0"
 ipython = ">=7.17"
 psycopg2 = ">=2.5.4"
+pytz = "^2022.1"
 pyyaml = ">=4.2b4"
 redis = "~3.3"
 requests = "^2.27"
