--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,6 +52,19 @@ server {
 	location /static/ {
         alias /var/djanghi/static/;
     }
+
+    error_page 404 /404.html;
+    location = /404.html {
+        root /var/djanghi/static/error_pages;
+        internal;
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /var/djanghi/static/error_pages;
+        internal;
+    }
+
 }
 
 server {
