--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,18 @@ server {
 	listen [::]:80;
 	server_name api.djanghi.com www.api.djanghi.com;
 	return 301 https://$server_name$request_uri;
+
+	error_page 404 /404.html;
+    location = /404.html {
+        root /var/djanghi/static/error_pages;
+        internal;
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /var/djanghi/static/error_pages;
+        internal;
+    }
 }
 
 server {
@@ -14,6 +26,18 @@ server {
 	listen [::]:80;
 	server_name djanghi.com www.djanghi.com;
 	return 301 https://$server_name$request_uri;
+
+	error_page 404 /404.html;
+    location = /404.html {
+        root /var/djanghi/static/error_pages;
+        internal;
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /var/djanghi/static/error_pages;
+        internal;
+    }
 }
 
 server {
@@ -51,6 +75,12 @@ server {
 
 	location /static/ {
         alias /var/djanghi/static/;
+
+        add_header Last-Modified $date_gmt;
+        add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+        if_modified_since off;
+        expires off;
+        etag off;
     }
 
     error_page 404 /404.html;
