Invalidate static files cache (#15)

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -114,5 +114,12 @@ server {
     location ^~ /.well-known/acme-challenge/ {
 	    allow all;
 		root /var/www/html;
+
+		# Invalidate static caches
+		add_header Last-Modified $date_gmt;
+        add_header Cache-Control 'no-store, no-cache';
+        if_modified_since off;
+        expires off;
+        etag off;
 	}
 }
