--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,7 +43,7 @@ server {
       proxy_redirect off;
       proxy_pass http://djanghi-api:8070;
 
-      error_page 404 /404.html;
+      error_page 404 /var/djanghi/static/error_pages/404.html;
     }
 
 	location ^~ /.well-known/acme-challenge/ {
@@ -55,16 +55,16 @@ server {
         alias /var/djanghi/static/;
     }
 
-    location /404.html {
-       alias /var/djanghi/static/error_pages/404.html;
-    }
+#     location /404.html {
+#        alias /var/djanghi/static/error_pages/404.html;
+#     }
     error_page 404 /404.html;
 
-#     location /404.html {
-#         internal;
-#         rewrite .* /var/djanghi/static/error_pages/404.html break;
-#         proxy_pass http://djanghi-api:8070;
-#     }
+    location /404.html {
+        internal;
+        rewrite .* /var/djanghi/static/error_pages/404.html break;
+        proxy_pass http://djanghi-api:8070;
+    }
 
 }
 
