--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,7 +43,8 @@ server {
       proxy_redirect off;
       proxy_pass http://djanghi-api:8070;
 
-      error_page 404 /var/djanghi/static/error_pages/404.html;
+      proxy_intercept_errors on;
+      error_page 404 /404.html;
     }
 
 	location ^~ /.well-known/acme-challenge/ {
@@ -55,17 +56,10 @@ server {
         alias /var/djanghi/static/;
     }
 
-#     location /404.html {
-#        alias /var/djanghi/static/error_pages/404.html;
-#     }
-    error_page 404 /404.html;
-
     location /404.html {
-        internal;
-        rewrite .* /var/djanghi/static/error_pages/404.html break;
-        proxy_pass http://djanghi-api:8070;
+       alias /var/djanghi/static/error_pages/404.html;
     }
-
+    error_page 404 /404.html;
 }
 
 server {
