--- a/.github/workflows/ci-config.yml
+++ b/.github/workflows/ci-config.yml
@@ -121,7 +121,7 @@ jobs:
           KEY: ${{ secrets.SSH_KEY }}
           script: |
             cd app/
-            docker rmi $(docker images -a -q)
+            docker system prune -f
             docker login ${{ secrets.REGISTRY_HOST }} -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.PACKAGE_ACCESS_TOKEN }}
             docker pull ${{ secrets.REGISTRY_HOST }}/${{ secrets.REGISTRY_USERNAME }}/${{ secrets.API_IMAGE_NAME }}
             docker pull ${{ secrets.REGISTRY_HOST }}/${{ secrets.REGISTRY_USERNAME }}/${{ secrets.NGINX_IMAGE }}
