--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -36,6 +36,8 @@ server {
 	client_max_body_size 4G;
 	keepalive_timeout 5;
 
+	proxy_intercept_errors on;
+
     location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
@@ -43,8 +45,9 @@ server {
       proxy_redirect off;
       proxy_pass http://djanghi-api:8070;
 
-      proxy_intercept_errors on;
+      # Custom error pages
       error_page 404 /404.html;
+      error_page 500 503 504 /50x.html;
     }
 
 	location ^~ /.well-known/acme-challenge/ {
@@ -56,10 +59,16 @@ server {
         alias /var/djanghi/static/;
     }
 
+    error_page 404 /404.html;
     location /404.html {
        alias /var/djanghi/static/error_pages/404.html;
     }
-    error_page 404 /404.html;
+
+    error_page 500 503 504 /50x.html;
+    location /50x.html {
+       alias /var/djanghi/static/error_pages/50x.html;
+    }
+
 }
 
 server {
