--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,18 +7,6 @@ server {
 	listen [::]:80;
 	server_name api.djanghi.com www.api.djanghi.com;
 	return 301 https://$server_name$request_uri;
-
-	error_page 404 /404.html;
-    location = /404.html {
-        root /var/djanghi/static/error_pages;
-        internal;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /var/djanghi/static/error_pages;
-        internal;
-    }
 }
 
 server {
@@ -26,18 +14,6 @@ server {
 	listen [::]:80;
 	server_name djanghi.com www.djanghi.com;
 	return 301 https://$server_name$request_uri;
-
-	error_page 404 /404.html;
-    location = /404.html {
-        root /var/djanghi/static/error_pages;
-        internal;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /var/djanghi/static/error_pages;
-        internal;
-    }
 }
 
 server {
@@ -60,12 +36,18 @@ server {
 	client_max_body_size 4G;
 	keepalive_timeout 5;
 
+	proxy_intercept_errors on;
+
     location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header Host $http_host;
       proxy_redirect off;
       proxy_pass http://djanghi-api:8070;
+
+      # Custom error pages
+      error_page 404 /404.html;
+      error_page 500 503 504 /50x.html;
     }
 
 	location ^~ /.well-known/acme-challenge/ {
@@ -75,24 +57,16 @@ server {
 
 	location /static/ {
         alias /var/djanghi/static/;
-
-        add_header Last-Modified $date_gmt;
-        add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-        if_modified_since off;
-        expires off;
-        etag off;
     }
 
     error_page 404 /404.html;
-    location = /404.html {
-        root /var/djanghi/static/error_pages;
-        internal;
+    location /404.html {
+       alias /var/djanghi/static/error_pages/404.html;
     }
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /var/djanghi/static/error_pages;
-        internal;
+    error_page 500 503 504 /50x.html;
+    location /50x.html {
+       alias /var/djanghi/static/error_pages/50x.html;
     }
 
 }
