--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,14 @@ django-extensions = "==3.1.5"
 django-fancy-cache = "~1.0"
 django-fieldsignals = "~0.5"
 django-filter = "~2.4"
+django-phonenumber-field = "^6.3.0"
 djangorestframework = "==3.12.4"
 djangorestframework-jsonapi = "~4.*"
 djangorestframework-simplejwt = "==5.0.0"
 drf-nested-routers = "~0.93.0"
 gunicorn = "==20.1.0"
 ipython = ">=7.17"
+phonenumbers = "^8.12"
 psycopg2 = ">=2.5.4"
 pytz = "^2022.1"
 pyyaml = ">=4.2b4"
