Kill nginx js file caching

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -85,6 +85,11 @@ server {
     ssl_certificate /etc/letsencrypt/live/api.djanghi.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.djanghi.com/privkey.pem;
 
+    location ~* \.(js|jsx)$ {
+        # kill cache
+        expires -1;
+    }
+
     location ^~ /.well-known/acme-challenge/ {
 	    allow all;
 		root /var/www/html;
