--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -80,15 +80,17 @@ server {
     index index.html index.htm index.nginx-debian.html;
     location / {
         try_files $uri $uri/ /index.html?$args;
+
+        # kill cache
+        add_header Last-Modified $date_gmt;
+        add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+        if_modified_since off;
+        expires off;
+        etag off;
     }
 
     ssl_certificate /etc/letsencrypt/live/api.djanghi.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.djanghi.com/privkey.pem;
-
-    location ~* \.(js|jsx)$ {
-        # kill cache
-        expires -1;
-    }
 
     location ^~ /.well-known/acme-challenge/ {
 	    allow all;
